Set up Docker; switch from AuthInterceptor to JwtAuthFilter; add logging to exceptions; revise MatchService.searchForMatches() to filter availability overlaps immediately; force mapper classes to handle absent DTO fields properly; in AvailabilityService, check that AvailabilityExceptions are created on legal dates and delete obsolete AvailabilityExceptions when parent RecurringAvailability is changed
